changed color scheme

--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Divyraj's Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
     <!-- Linking external CSS file -->
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <!-- Header section -->
     <header>
-        <h1>Divyraj Solanki</h1>
-        <p>Web Developer | Software Engineer | Programmer</p>
+        <div class="header-container">
+            <h1 class="name">Divyraj Solanki</h1>
+            <p class="titles">Web Developer | Software Engineer | Programmer</p>
+        </div>
     </header>
-
+    
     <!-- About Me section -->
     <section id="about">
         <h2>About Me</h2>
