--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- Header section -->
     <header>
         <div class="header-container">
+            <img src="DV.png" alt="logo">
             <h1 class="name">Divyraj Solanki</h1>
             <p class="titles">Web Developer | Software Engineer | Programmer</p>
         </div>
