--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
 <body>
     <!-- Header section -->
     <header>
-        <img src="DV.png" alt="logo">
         <div class="header-container">
             <h1 class="name">Divyraj Solanki</h1>
             <p class="titles">Web Developer | Software Engineer | Programmer</p>
         </div>
     </header>
+
+    <section>
+        
+    </section>
     
     <!-- About Me section -->
     <section id="about">
