--- a/index.html
+++ b/index.html
@@ -71,6 +71,25 @@
         </div>
     </section>
 
+    <section id="socials">
+        <h2>Follow Me</h2>
+        <div class="social-container">
+            <a href="https://instagram.com/dvyrj" target="_blank" class="social-icon">
+                <img src="ig-logo.svg" alt="Twitter">
+            </a>
+            <a href="https://github.com/dvyrj08" target="_blank" class="social-icon">
+                <img src="github-mark.svg" alt="GitHub">
+            </a>
+            <a href="https://www.linkedin.com/in/divyrajsolanki9586" target="_blank" class="social-icon">
+                <img src="icons8-linkedin.svg" alt="LinkedIn">
+            </a>
+            <!-- <a href="mailto:your-email@example.com" class="social-icon">
+                <img src="path-to-email-logo.svg" alt="Email">
+            </a> -->
+        </div>
+    </section>
+    
+
     <!-- Contact section -->
     <section id="contact">
         <h2>Contact</h2>
