--- a/index.html
+++ b/index.html
@@ -5,18 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Divyraj's Portfolio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="icon" href="assets/images/dv-favicon.png" type="image/x-icon">
+<link rel="preconnect" href="https://rsms.me/">
+<link rel="stylesheet" href="https://rsms.me/inter/inter.css">    <link rel="icon" href="assets/images/dv-favicon.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 </head>
 <body>
 
     <!-- Header section -->
-    <header>
-        <div class="header-container">
-            <img src="assets/images/DV.png" alt="logo" class="logo">
-        </div>
-    </header>
+   
 
     <main class="portfolio-grid-container">
 
