--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 
         <!-- Hero Section -->
         <section id="hero-introduction" class="grid-area-hero">
-            <img src="assets/images/DV.png" alt="logo" class="logo">
             <h1 class="name">Divyraj Solanki</h1>
             <p class="titles">Web Developer | Software Engineer | Programmer</p>
             <p>Let's build something great together!</p>
@@ -26,7 +25,7 @@
 
         <!-- Skills Section -->
         <section id="skills" class="grid-area-skills">
-            <h2>My Expertise</h2>
+            <h2>Skills</h2>
             <div class="skills-container">
                 <div class="skill" data-label="HTML">
                     <img src="assets/images/html-logo.svg" alt="HTML Logo">
@@ -48,13 +47,13 @@
 
         <!-- About Section -->
         <section id="about" class="grid-area-about">
-            <h2>Let's Talk About Me</h2>
+            <h2>About Me</h2>
             <p>I'm a passionate web developer with experience in HTML, CSS, JavaScript, and more. I love building web apps that are fast, responsive, and user-friendly.</p>
         </section>
 
         <!-- Projects Section -->
         <section id="projects" class="grid-area-projects">
-            <h2>My Creative Work</h2>
+            <h2>Projects</h2>
             <div class="projects-container">
                 <div class="project">
                     <h3>Portfolio Website</h3>
@@ -91,7 +90,7 @@
 
     <!-- Contact Section -->
     <section id="contact" class="full-width-section">
-        <h2>Contact Me</h2>
+        <h2>Contact</h2>
         <p>Feel free to reach out to me at: <a href="mailto:divy9586@gmail.com">divy9586@gmail.com</a></p>
     </section>
 
